--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
+    <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link href="css/site.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/f4 (3).png">
+
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -56,9 +59,26 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="footer mt-auto py-3 bg-dark sticky-footer">
-        <div class="container-fluid text-center">
-            <span class="text-muted">Place sticky footer content here.</span>
+    <footer class="footer mt-auto py-3 sticky-footer">
+        <div class="container-fluid">
+            <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 gy-2">
+                <div class="col d-flex order-last order-lg-first text-light">
+                    <div><span class="text-light">&copy;2023</span> F4 - It's Done | f4@gmail.com</div>
+                </div>
+                <div class="col d-flex align-items-center justify-content-center">
+                    <img src="img/f4(8).png" alt="F4 Logo - It's Done" height="48">
+                </div>
+                <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
+                    <div class="row">
+                        <div class="col social"><a href="" target="blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social"><a href="" target="blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="" target="blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="" target="blank"><i class="fab fa-youtube fa-2x"></i></a></div>
+                        <div class="col social"><a href="" target="blank"><i class="fab fa-tiktok fa-2x"></i></a></div>
+                        <div class="col social"><a href="" target="blank"><i class="fab fa-spotify fa-2x"></i></a></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     
