--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">APP NAME</a>
+            <a class="navbar-brand" href="#"><img src="img/f4 (3).png" class="d-inline" width="30" height="30"> APP NAME</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@
                     <div><span class="text-light">&copy;2023</span> F4 - It's Done | f4@gmail.com</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-center">
-                    <img src="img/f4(8).png" alt="F4 Logo - It's Done" height="48">
+                    <img src="img/f4(8).png" alt="F4 Logo - It's Done" width="100" height="48">
                 </div>
                 <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
                     <div class="row">
