--- a/index.html
+++ b/index.html
@@ -52,9 +52,38 @@
 
     <!-- Main Section -->
     <main class="flex-shrink-0">
-        <div class="container ">
-            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
-            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
+                <div class="col order-last order-lg-first">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME</h1>
+                    <h4 class="lead">Develop Consistent Applications. <strong>Consistent.</strong></h4>
+                    <ul class="fa-ul pt-2 checklist">
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS & Bootstrap Layout</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript In/Then/Else</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
+                    </ul>
+                    <div>
+                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try the Application</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="img/f4(4).png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                </div>
+                <h5 class="fw-bold mt-5">
+                    <div class="d-flex">
+                        <div class="row">
+                            <div class="col"><i class="fab fa-js-square fa-5x jsicon"></i></div>
+                            <div class="col"><i class="fab fa-bootstrap fa-5x bsicon"></i></div>
+                            <div class="col"><i class="fab fa-html5 fa-5x html5icon"></i></div>
+                            <div class="col"><i class="fab fa-css3-alt fa-5x css3icon"></i></div>
+                        </div>
+                    </div>
+                </h5>
+            </div>
         </div>
     </main>
 
